--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 <body>
     <h1>Hello World</h1>
     <div class="mac-address">
-        <strong>Your MAC Address:</strong> <span id="mac-display">Loading...</span>
+        <!-- <strong>Your MAC Address:</strong> <span id="mac-display">Loading...</span> -->
     </div>
 
-    <script>
+    <!-- <script>
         // Get MAC address from URL parameters
         const urlParams = new URLSearchParams(window.location.search);
         const macAddress = urlParams.get('mac');
@@ -37,6 +37,6 @@
         
         // Optional: You could log this or use it for other purposes
         console.log("User MAC address:", macAddress);
-    </script>
+    </script> -->
 </body>
 </html>
